--- a/model/trails.ipynb
+++ b/model/trails.ipynb
@@ -181,6 +181,31 @@
    "id": "43d2e6c6",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "PINECONE-APIKEY =\"pcsk_47nEiF_J2k99k89PWfdMwDPC5n238kb5XtBcRk4utgieWgvMk1wxR9XWGG112y4Q7CSCEx\"\n",
+    "pincone-env=\"https://medicalchatbot-r59zzh0.svc.aped-4627-b74a.pinecone.io\"\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "8438521b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def load_pdf(Data):\n",
+    "    loader = Directoryloader(data,glob=\"**/*.pdf\",loader_cls=PyMuPDFLoader)\n",
+    "    documents = loader.load()\n",
+    "    return documents"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e2062b95",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
